# golden-dataset-mcp

./: .mcpregistry_github_token  .mcpregistry_registry_token  LICENSE  README.md  mcp.json  pyproject.toml  test_evaluate.py
.github/workflows/: publish.yml
.golden_dataset/: manifest.json
.mcp/: server.json
golden-dataset-studio-mcp/: .gitignore
golden-dataset-studio-mcp/.github/workflows/: ci.yml
golden-dataset-studio-mcp/.mcp/: server.json
golden-dataset-studio-mcp/src/golden_dataset_mcp/: models.py  server.py
golden-dataset-studio-mcp/tests/: conftest.py  test_protocol_smoke.py
src/golden_dataset_mcp/: __init__.py
tests/: test_lifecycle.py
